--- a/example/portfolio-cms/css/main.css
+++ b/example/portfolio-cms/css/main.css
@@ -49,6 +49,15 @@ h2 { margin-top: 30px; }
 	content: "\f15c";
 }
 
+.menu-level-1 {}
+.menu-level-2 { padding-left: 30px; }
+.menu-level-3 { padding-left: 45px; }
+.menu-level-4 { padding-left: 60px; }
+
+.hover-pointer:hover { cursor: pointer; }
+
+.smaller { font-size: 40%; }
+
 @media (min-width: 992px) {
 	#sidebar .affix {
 		width: 262.5px;
